--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 /* Styles go here */
 
+body {
+	padding-top: 70px;
+}
+
 .topbar {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	color: white;
 	background: orange;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	border-radius: 0;
 }
 
 .topbar .col-xs-2 {
