--- a/style.css
+++ b/style.css
@@ -28,3 +28,57 @@ body {
 a {
 	color: orange;
 }
+
+.pLeft {
+	padding-left: 1em;
+}
+.pRight {
+	padding-right: 1em;
+}
+.pTop {
+	padding-top: 1em;
+}
+.pBottom {
+	padding-bottom: 1em;
+}
+.pX {
+	padding-left: 1em;
+	padding-right: 1em;
+}
+.pY {
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+.pAll {
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+
+.pLeft0 {
+	padding-left: 0;
+}
+.pRight0 {
+	padding-right: 0;
+}
+.pTop0 {
+	padding-top: 0;
+}
+.pBottom0 {
+	padding-bottom: 0;
+}
+.pX0 {
+	padding-left: 0;
+	padding-right: 0;
+}
+.pY0 {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+.pAll0 {
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+}
