--- a/bootstrap/scss/_variables.scss
+++ b/bootstrap/scss/_variables.scss
@@ -32,10 +32,10 @@ $gray-light:                #818a91 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$brand-primary:             orange !default;
+$brand-primary:             #7331DB !default;
 $brand-success:             #5cb85c !default;
 $brand-info:                #5bc0de !default;
-$brand-warning:             gold !default;
+$brand-warning:             orange !default;
 $brand-danger:              #d9534f !default;
 
 
