--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <top-bar></top-bar>
 
-<ul class="list-group">
+<ul class="list-group list-group-flush row">
 	<li class="list-group-item lead">
         <div class="row">
         	<div class="col-xs-8">
