--- a/bootstrap/scss/_utilities-spacing.scss
+++ b/bootstrap/scss/_utilities-spacing.scss
@@ -37,3 +37,59 @@
   left: 0;
   z-index: $zindex-navbar-fixed;
 }
+
+
+// Pascal's stuff
+.pLeft {
+  padding-left: $grid-gutter-width/2;
+}
+.pRight {
+  padding-right: $grid-gutter-width/2;
+}
+.pTop {
+  padding-top: $grid-gutter-width/2;
+}
+.pBottom {
+  padding-bottom: $grid-gutter-width/2;
+}
+.pX {
+  padding-left: $grid-gutter-width/2;
+  padding-right: $grid-gutter-width/2;
+}
+.pY {
+  padding-top: $grid-gutter-width/2;
+  padding-bottom: $grid-gutter-width/2;
+}
+.pAll {
+  padding-left: $grid-gutter-width/2;
+  padding-right: $grid-gutter-width/2;
+  padding-top: $grid-gutter-width/2;
+  padding-bottom: $grid-gutter-width/2;
+}
+
+.pLeft0 {
+  padding-left: 0;
+}
+.pRight0 {
+  padding-right: 0;
+}
+.pTop0 {
+  padding-top: 0;
+}
+.pBottom0 {
+  padding-bottom: 0;
+}
+.pX0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+.pY0 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.pAll0 {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
