--- a/views/events/songs.html
+++ b/views/events/songs.html
@@ -1,5 +1,7 @@
 <top-bar></top-bar>
 
-<div class="well" ng-repeat="(key, track) in existing_tracks" ng-click="addTrack(key)">
-    {{ track.name }}
+<div class="list-group list-group-flush row">
+	<li class="list-group-item" ng-repeat="(key, track) in existing_tracks" ng-click="addTrack(key)">
+	    {{ track.name }}
+	</li>
 </div>
