--- a/views/topbar.html
+++ b/views/topbar.html
@@ -1,4 +1,12 @@
-<div class='row panel text-center topbar'>
+<nav class="navbar navbar-fixed-top topbar">
+<!-- 	<div class="collapse" id="exCollapsingNavbar">
+		<div class="bg-inverse p-a-1">
+			<h4>Collapsed content</h4>
+		</div>
+	</div>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+		&#9776;
+	</button> -->
 	<div class='col-xs-2'>
 		<a onclick="window.history.back();" class='btn' ng-show="page.leftBtn == 'prev'">
 			<i class="fa fa-chevron-left"></i>
@@ -7,9 +15,9 @@
 			<i class='fa fa-{{ page.leftBtn.fa}}'></i>
 		</a>
 	</div>
-	<h1 class='h4 col-xs-8'>
+	<p class='col-xs-8'>
 		{{ page.title }}
-	</h1>
+	</p>
 	<div class='col-xs-2'>
 		<a ng-href='#/{{ page.rightBtn.href }}' class='btn' ng-hide="page.rightBtn == 'submit'">
 			<i class='fa fa-{{ page.rightBtn.fa}}'></i>
@@ -18,4 +26,4 @@
 			<i class='fa fa-check'></i>
 		</button>
 	</div>
-</div>
+</nav>
