--- a/bootstrap/scss/_utilities.scss
+++ b/bootstrap/scss/_utilities.scss
@@ -52,6 +52,9 @@
 
 // Alignment
 
+.text-left        { text-align: left !important; }
+.text-right        { text-align: right !important; }
+.text-center        { text-align: center !important; }
 .text-justify        { text-align: justify !important; }
 .text-nowrap         { white-space: nowrap !important; }
 .text-truncate       { @include text-truncate; }
