--- a/views/topbar.html
+++ b/views/topbar.html
@@ -1,13 +1,15 @@
-<nav class="navbar navbar-fixed-top topbar">
-<!-- 	<div class="collapse" id="exCollapsingNavbar">
+<nav class="navbar navbar-fixed-top topbar p0">
+ 	<div class="collapse" id="exCollapsingNavbar">
 		<div class="bg-inverse p-a-1">
-			<h4>Collapsed content</h4>
+			<p>Collapsed content</p>
 		</div>
 	</div>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-		&#9776;
-	</button> -->
-	<div class='col-xs-2'>
+	<div class='col-xs-2' ng-hide="page.leftBtn">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+			&#9776;
+		</button>
+	</div>
+	<div class='col-xs-2' ng-show="page.leftBtn">
 		<a onclick="window.history.back();" class='btn' ng-show="page.leftBtn == 'prev'">
 			<i class="fa fa-chevron-left"></i>
 		</a>
