--- a/views/songs/edit.html
+++ b/views/songs/edit.html
@@ -13,6 +13,11 @@
 	</fieldset>
 	<hr>
 	<fieldset>
+		<label for="notes">Notes</label>
+		<textarea id="notes" ng-model="track.notes" class="form-control"></textarea>
+	</fieldset>
+	<hr>
+	<fieldset>
 		<label for="lyrics">Lyrics</label>
 		<textarea id="lyrics" ng-model="track.lyrics" class="form-control"></textarea>
 	</fieldset>
