--- a/views/songs/new.html
+++ b/views/songs/new.html
@@ -1,18 +1,6 @@
 <form ng-submit="addSong()">
 
-    <div class="row panel text-center topbar">
-        <div class="col-xs-2">
-            <a class="btn" onclick="window.history.back();">
-                <i class="fa fa-chevron-left"></i>
-            </a>
-        </div>
-        <h1 class="h4 col-xs-8">New song</h1>
-        <div class="col-xs-2">
-            <button type="submit" class="btn" ng-show="song.name">
-                <i class="fa fa-check"></i>
-            </button>
-        </div>
-    </div>
+    <top-bar></top-bar>
 
     <p class="panel">
         <label for="name">Title</label>
