Better padding on home page

--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 		        </a>
         	</div>
         	<div class="col-xs-4">
-		        <a href="#/events/new" class="btn pull-right" title="Add an event">
+		        <a href="#/events/new" class="btn pull-right pRight0" title="Add an event">
 		            Add <i class="fa fa-plus"></i>
 		        </a>
         	</div>
