Added publication as type Fixed nasty date bug

--- a/views/events/edit.html
+++ b/views/events/edit.html
@@ -21,6 +21,7 @@
 		<select id="type" ng-model="event.type" class="form-control">
 			<option value="concert">Concert</option>
 			<option value="rehearsal">Rehearsal</option>
+			<option value="release">Release (album, demo, EP...)</option>
 		</select>
 	</fieldset>
 	
