--- a/views/events/single.html
+++ b/views/events/single.html
@@ -1,6 +1,7 @@
 <top-bar></top-bar>
 
 <header class="h4">{{ event.title }}</header>
+<p class="lead" style="text-transform: capitalize;">{{ event.type }} </p>
 <p>{{ event.date | date:'dd MMMM yyyy - HH:mm' }} </p>
 
 <p ng-hide="event_tracks[0]"><a class="btn" href="#/events/{{ id }}/songs">Add songs to this event</a></p>
