Fixed add / delete events

--- a/views/test.html
+++ b/views/test.html
@@ -1,3 +1,6 @@
 <top-bar></top-bar>
 
-<h1>Test</h1>
+<p class="lead">
+	We'll get this bloody "user" service or factory working
+</p>
+<pre>{{ thisUser | json }}</pre>
