Song managing page

--- a/views/home.html
+++ b/views/home.html
@@ -1,29 +1,49 @@
 <top-bar></top-bar>
 
-<ul class="list-group list-group-flush row">
-	<li class="list-group-item lead">
-        <div class="row">
-        	<div class="col-xs-8">
-		        <a href="#/events/" title="See all events" class="btn pLeft0">
-		        	Upcoming events
-		        </a>
-        	</div>
-        	<div class="col-xs-4">
-		        <a href="#/events/new" class="btn pull-right pRight0" title="Add an event">
-		            Add <i class="fa fa-plus"></i>
-		        </a>
-        	</div>
+<div class="card">
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item lead">
+            <div class="row">
+                <div class="col-xs-8">
+                    <a href="#/events/" title="See all events" class="btn pLeft0">
+                        <i class="fa fa-calendar"></i> Upcoming events
+                    </a>
+                </div>
+                <div class="col-xs-4">
+                    <a href="#/events/new" class="btn pull-right pRight0" title="Add an event">
+                        Add <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item" ng-repeat="event in group.events | limitTo: 2"> 
+            <a href="#/events/{{ event.id }}">
+                <time><small>{{ event.date | date }}</small></time>
+                <p class="h6">{{ event.title }}</p>
+            </a>
+        </li>
+        <li class="list-group-item text-right">
+            <a href="#/events/" title="See all events">
+                <small>See all <i class="fa fa-chevron-right pLeft"></i></small>
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+<div class="row pTop text-center">
+    <div class="col-xs-6">
+        <a href="#/songs">
+            <div class="btn btn-default">
+                <i class="fa fa-headphones fa-4x"></i>
+                <p class="card-text pTop">Songs</p>
+            </div>
+        </a>
+    </div>
+    <div class="col-xs-6">
+        <div class="btn btn-default">
+            <i class="fa fa-comment fa-4x"></i>
+            <p class="card-text pTop">Messages</p>
         </div>
-    </li>
-    <li class="list-group-item" ng-repeat="event in group.events | limitTo: 2"> 
-		<a href="#/events/{{ event.id }}">
-	        <p class="h6">{{ event.title }}</p>
-		</a>
-        <time><small>{{ event.date | date }}</small></time>
-    </li>
-    <li class="list-group-item text-right">
-        <a href="#/events/" title="See all events">
-	    	<small>See all events <i class="fa fa-chevron-right pLeft"></i></small>
-		</a>
-    </li>
-</ul>
+    </div>
+</div>
