Wrong function called

--- a/views/pick_group.html
+++ b/views/pick_group.html
@@ -5,7 +5,7 @@
 	<input type="search" ng-model="query" class="form-control" placeholder="Search groups">
 	<ul ng-show="query" class="list-group list-group-flush">
 		<li ng-repeat="group in groups | limitTo: 20 | filter:query" class="list-group-item" ng-show="!user_groups[group.$id].status">
-			<button type="button" class="btn btn-secondary pull-right btn-sm" title="Join group" ng-click="checkRequest(group.$id)" ng-hide="user_groups[group.$id].status" >
+			<button type="button" class="btn btn-secondary pull-right btn-sm" title="Join group" ng-click="askToJoin(group.$id)" ng-hide="user_groups[group.$id].status" >
 				<i class="fa fa-user-plus"></i>
 			</button>
 			{{ group.name }}
@@ -25,5 +25,6 @@
 		<i class="fa fa-chevron-right fa-lg pull-right" ng-show="group.status == 'member' || group.status == 'admin'"></i>
 		<small ng-show="group.status == 'pending'"> You sent a request </small>
 		<small ng-show="group.status == 'member'"> You're a member </small>
+		<small ng-show="group.status == 'admin'"> Member and admin </small>
 	</li>
 </ul>
