Better "groups" button

--- a/views/topbar.html
+++ b/views/topbar.html
@@ -2,9 +2,8 @@
  	<div class="collapse" id="exCollapsingNavbar">
 		<div class="bg-inverse p-a-1">
 
-
 	    	<div ng-controller="topBarController" class="panel">
-				<a href="#/group/pick"> Other groups </a>
+				<a href="#/group/pick" class="btn btn-secondary"> <i class="fa fa-group"></i> Groups </a>
 				<hr>
 				<button class="btn btn-primary" ng-click="logOut()" ng-show="auth">
 					<i class="fa fa-sign-out"></i> Log out
